[package]
name = "spanda-ota"
version.workspace = true
edition.workspace = true
description = "OTA deployment planning, agents, and remote rollout for Spanda"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
spanda-audit = { path = "../spanda-audit" }
spanda-ast = { path = "../spanda-ast" }
spanda-certify = { path = "../spanda-certify" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-runtime = { path = "../spanda-runtime" }

[dev-dependencies]
spanda-driver = { path = "../spanda-driver" }
