[package]
name = "spanda-package"
version = "0.1.0"
edition = "2021"
description = "Spanda package manifest, dependency resolution, and validation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
spanda-hardware = { path = "../spanda-hardware" }

[dev-dependencies]
tempfile = "3"
