[package]
name = "spanda-providers"
version.workspace = true
edition.workspace = true
description = "Spanda official package provider bootstrap and transport adapter wiring"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-comm = { path = "../spanda-comm" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-transport = { path = "../spanda-transport" }
spanda-transport-routing = { path = "../spanda-transport-routing" }
spanda-transport-dds = { path = "../spanda-transport-dds" }
spanda-transport-mqtt = { path = "../spanda-transport-mqtt" }
spanda-transport-ros2 = { path = "../spanda-transport-ros2" }
spanda-transport-websocket = { path = "../spanda-transport-websocket" }
spanda-audit = { path = "../spanda-audit" }
serde_json = "1"

[dev-dependencies]
spanda-transport-routing = { path = "../spanda-transport-routing" }
spanda-transport-ros2 = { path = "../spanda-transport-ros2" }
