[package]
name = "spanda-readiness"
version.workspace = true
edition.workspace = true
description = "Operational readiness, mission verification, failure analysis, and safety reporting for Spanda"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-capability = { path = "../spanda-capability" }
spanda-certify = { path = "../spanda-certify" }
spanda-driver = { path = "../spanda-driver" }
spanda-error = { path = "../spanda-error" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-security = { path = "../spanda-security" }

[dev-dependencies]
serde_json = "1"
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
