[package]
name = "spanda-score"
version.workspace = true
edition.workspace = true
description = "Autonomous systems scorecard rollup for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-capability = { path = "../spanda-capability" }
spanda-config = { path = "../spanda-config" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-threat = { path = "../spanda-threat" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
