[package]
name = "spanda-sdk"
version = "0.4.1"
edition = "2021"
description = "Official Rust SDK for Spanda Control Center API v1"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
build = "build.rs"

[features]
default = []
grpc = ["dep:tonic", "dep:prost", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[build-dependencies]
tonic-build = { version = "0.12" }

[dev-dependencies]
serde_json = "1"

[[example]]
name = "readiness"
path = "examples/readiness.rs"

[[example]]
name = "device_inventory"
path = "examples/device_inventory.rs"

[[example]]
name = "entity_mutations"
path = "examples/entity_mutations.rs"
